--- a/templates/home.html
+++ b/templates/home.html
@@ -33,11 +33,11 @@
 <![endif]-->
 
 <!-- Favicon and touch icons -->
-<link rel="shortcut icon" href="static/assets/ico/favicon.png">
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="static/assets/ico/apple-touch-icon-144-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="static/assets/ico/apple-touch-icon-114-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="static/assets/ico/apple-touch-icon-72-precomposed.png">
-<link rel="apple-touch-icon-precomposed" href="static/assets/ico/apple-touch-icon-57-precomposed.png">
+<link rel="shortcut icon" href="../static/assets/ico/favicon.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="../static/assets/ico/apple-touch-icon-144-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="../static/assets/ico/apple-touch-icon-114-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="../static/assets/ico/apple-touch-icon-72-precomposed.png">
+<link rel="apple-touch-icon-precomposed" href="../static/assets/ico/apple-touch-icon-57-precomposed.png">
 
 </head>
 
@@ -69,15 +69,7 @@
 			<div class="collapse navbar-collapse" id="top-navbar-1">
 				<ul class="nav navbar-nav navbar-right">
 					<li>
-						<span class="li-text">
-							登录
-						</span>
-						<span class="li-social">
-							<a href="login.html"><span class="social_facebook"></span></a>
-							<a href="#"><span class="social_twitter"></span></a>
-							<a href="#"><span class="social_googleplus"></span></a>
-							<a href="#"><span class="social_skype"></span></a>
-						</span>
+						<a href="login.html" class="admin-login-text">管理员登录</a>
 					</li>
 				</ul>
 			</div>
