--- a/templates/login.html
+++ b/templates/login.html
@@ -6,16 +6,16 @@
 	<title>Web 2.0 Login Form</title>
 
 	<!--- CSS --->
-	<link rel="stylesheet" href="../../finalEX/static/assets/css/loginstyle.css" type="text/css" />
+	<link rel="stylesheet" href="../static/assets/css/loginstyle.css" type="text/css" />
 
 
 	<!--- Javascript libraries (jQuery and Selectivizr) used for the custom checkbox --->
 
 	<!--[if (gte IE 6)&(lte IE 8)]>
-        <script type="text/javascript" src="../../finalEX/static/assets/js/jquery-1.7.1.min.js"></script>
-        <script type="text/javascript" src="../../finalEX/static/assets/js/selectivizr.js"></script>
+        <script type="text/javascript" src="../static/assets/js/jquery-1.7.1.min.js"></script>
+        <script type="text/javascript" src="../static/assets/js/selectivizr.js"></script>
         <noscript>
-            <link rel="stylesheet" href="../../finalEX/static/assets/css/loginfallback.css"/>
+            <link rel="stylesheet" href="../static/assets/css/loginfallback.css"/>
         </noscript>
         <![endif]-->
 
