--- a/static/assets/css/loginstyle.css
+++ b/static/assets/css/loginstyle.css
@@ -272,3 +272,10 @@ input[type="submit"]:hover, input[type="submit"]:focus {
 	color: #2d2d2d;
 }
 
+.admin-go{
+	color: white;
+}
+
+.admin-go:hover {
+	color: gray;
+}
