--- a/templates/home.html
+++ b/templates/home.html
@@ -69,7 +69,7 @@
 			<div class="collapse navbar-collapse" id="top-navbar-1">
 				<ul class="nav navbar-nav navbar-right">
 					<li>
-						<div onclick="window.location.href= 'login.html';return false" class="admin-login-text">管理员登录</div>
+						<div onclick="window.location.href= 'login';return false" class="admin-login-text">管理员登录</div>
 					</li>
 				</ul>
 			</div>
