--- a/templates/admin.html
+++ b/templates/admin.html
@@ -89,6 +89,7 @@
                                 url: "/api/getAll",
                                 success: function (res) {
                                     console.log(res)
+                                    data = res.list//{list:[]}
                                 }
                             })
                     let table=''
