--- a/templates/search.html
+++ b/templates/search.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>search界面暂时和home界面差不多</title>
+<title>Search</title>
 
 <!-- CSS -->
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
@@ -48,123 +48,45 @@
 	<div class="loader-img"></div>
 </div>
 
-<!-- Top content -->
-<div class="top-content">
-
-	<div class="top-content-gradient gradient"></div>
-
-	<!-- Top menu -->
-	<nav class="navbar navbar-inverse navbar-no-bg" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-1">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="home.html">二人转主页</a>
-			</div>
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse" id="top-navbar-1">
-				<ul class="nav navbar-nav navbar-right">
-					<li>
-						<span class="li-text">
-							登录
-						</span>
-						<span class="li-social">
-							<a href="login.html"><span class="social_facebook"></span></a>
-							<a href="#"><span class="social_twitter"></span></a>
-							<a href="#"><span class="social_googleplus"></span></a>
-							<a href="#"><span class="social_skype"></span></a>
-						</span>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-
-	<div class="inner-bg">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-8 text">
-					<h1 class="wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="1s">
-						二人转简介
-					</h1>
-					<div class="description wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="2s">
-						<p>
-							<strong>二人转</strong>，史称小秧歌、双玩艺、蹦蹦，又称过口、双条边曲、风柳、春歌、半班戏、东北地方戏等。
-							是一种有着三百多年历史，悠远的原始文化传承的独具特色的民间艺术形式。
-						</p>
-					</div>
-					<div class="timer wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.5s">
-						<div class="days-wrapper">
-							<span class="days"></span> <span class="t-text">剧本 /</span>
-						</div>
-						<div class="hours-wrapper">
-							<span class="hours"></span> <span class="t-text">图片 /</span>
-						</div>
-						<div class="minutes-wrapper">
-							<span class="minutes"></span> <span class="t-text">视频 /</span>
-						</div>
-					</div>
-					<div class="subscribe wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="3s">
-						<form class="form-inline" role="form" method="post" action="search.html">
-							<div class="form-group">
-								<label class="sr-only" for="subscribe-email">Email address</label>
-								<input type="text" name="text" placeholder="查找你想要的内容" class="subscribe-email form-control" id="subscribe-email">
-							</div>
-							<button type="submit" class="btn" onclick="search.html">搜索</button>
-
-						</form>
-						<div class="success-message"></div>
-						<div class="error-message"></div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-</div>
-
 <!-- More info -->
 <div class="features-container section-container">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 features section-description wow fadeIn">
-				<h2>二人转相关</h2>
+				<h3>搜索资源名</h3>
+				<form method="post">
+					<input type="text" name="text" autocomplete="off" >
+					<input class="btns" type="submit" name="submit" value="搜索">
+				</form>
 				<div class="divider-1 wow fadeInUp"><span></span></div>
 			</div>
 		</div>
+
 		<div class="row">
-			<div class="col-sm-3 features-box wow fadeInUp">
+			<div >
 				<div class="features-box-icon">
 					<span aria-hidden="true" class="icon_profile"></span>
 				</div>
-				<h3>剧本</h3>
-				<p> 1111111</p>
-			</div>
-			<div class="col-sm-3 features-box wow fadeInDown">
-				<div class="features-box-icon">
-					<span aria-hidden="true" class="icon_pencil"></span>
+				<h3>搜索结果</h3>
+				{% for result in results %}
+					{% if result.type_resources=='剧本' %}
+				<div>
+						<p>剧本</p>
+						<p>{{result.content_resources}}</p>
 				</div>
-				<h3>图片</h3>
-				<p>pic</p>
-			</div>
-			<div class="col-sm-3 features-box wow fadeInUp">
-				<div class="features-box-icon">
-					<span aria-hidden="true" class="icon_cogs"></span>
-				</div>
-				<h3>视频</h3>
-				<p>video</p>
-			</div>
-			<div class="col-sm-3 features-box wow fadeInDown">
-				<div class="features-box-icon">
-					<span aria-hidden="true" class="icon_pin"></span>
-				</div>
-				<h3>不知道加啥</h3>
-				<p>etc。</p>
-			</div>
+					{% endif %}
+					{% if result.type_resources=='图片' %}
+					<div class="pics">
+						<p>图片</p>
+						<img src="{{result.path_resources}}" alt="{{result.title_resources}}" height="250" width="400">
+					</div>
+					{% endif %}
+					{% if result.type_resources=='视频' %}
+						<p>视频</p>
+						<a href="{{result.path_resources}}" target="_blank">{{result.title_resources}}</a>
+					{% endif %}  {# 大部分 Jinja 语句都需要声明关闭 #}
+				{% endfor%}
+
 		</div>
 	</div>
 </div>
